--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@formkit/nuxt": "^1.6.9",
     "bootstrap-icons": "^1.13.1",
-    "nuxt": "^3.17.4",
+    "nuxt": "3.15.4",
     "vue": "^3.5.14",
     "vue-router": "^4.5.1"
   },
